<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMenuPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17202A"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:baselineAligned="false"
        android:text="@string/men_principal"
        android:textColor="#58D68D"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSeleccionHongo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#007BFF"
        android:paddingVertical="18dp"
        android:text="@string/selecci_n_de_hongo"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnTuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#007BFF"
        android:paddingVertical="18dp"
        android:text="@string/como_usar"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnQuienesSomos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#007BFF"
        android:paddingVertical="18dp"
        android:text="@string/qui_nes_somos"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnInfoProyecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#007BFF"
        android:paddingVertical="18dp"
        android:text="@string/informaci_n_del_proyecto"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>
